--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </a>
   </body>
   <body>
-    
+    <video width="320" height="240" controls>
+  <source src="sigma.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
   </body>
 </html>
 
