--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <a href="https://soundcloud.com/travisscotlover911/skibidi-toilet-travis-scott">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy7Y265Don_ID1IHnM5NF7vi1mmgGaHLSYdyRkXdAXSZj9glpJ1uqtEnKbJWM:https://cdn.vox-cdn.com/thumbor/B-gSiOaIio7NM09ieSpgrarT7gQ%3D/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/19923267/giant_travis_scott.jpg&s    ">
   </a>
+  <a href="https://en.wikipedia.org/wiki/Chinese_Civil_War">
+    <img src="https://i1.sndcdn.com/artworks-CyTzk0PMsjHFfr7D-S8wWcw-t500x500.jpg">
+  </a>
 </body>
 </html>
 
