--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
   </a>
   <a href="https://en.wikipedia.org/wiki/Chinese_Civil_War">
     <img src="https://i1.sndcdn.com/artworks-CyTzk0PMsjHFfr7D-S8wWcw-t500x500.jpg">
-  </a>
-  <body style="text-align: center;">
-<a href="https://88crystal99.github.io/tic-tac-toe/" style="text-decoration: none;">
-    <button style="font-size: 25px; background-color: blue; border: none; border-radius: 20px; color: white;">Shout out to 88crystal99</button>
-</a>
+ <a href="https://88crystal99.github.io/tic-tac-toe/" style="text-decoration: none;">
+        <button style="font-size: 25px; background-color: blue; border: none; border-radius: 20px; color: black;">Shout out to 88crystal99</button>
+    </a>
 </body>
 </html>
 
